@@ -129,11 +129,11 @@ public class MacTTSVoice implements Voice {
         Locale locale;
 
         if (variant != null) {
-            locale = new Locale(language, country, variant);
+            locale = Locale.of(language, country, variant);
         } else if (country != null) {
-            locale = new Locale(language, country);
+            locale = Locale.of(language, country);
         } else {
-            locale = new Locale(language);
+            locale = Locale.of(language);
         }
 
         return locale;
